<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_500dp"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/_20dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:src="@drawable/dummy_photo"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dummy_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:layout_marginStart="@dimen/_16dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_200dp">
        <ImageButton
            android:id="@+id/ib_moscow"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:background="@android:color/white"
            android:src="@drawable/ic_location"
            android:theme="@style/Theme.WeatherApp.New"
            android:contentDescription="@string/txt_content_desc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_moscow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moscow_russia"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="@dimen/_8dp"
                android:layout_marginStart="@dimen/_4dp"
                android:textSize="@dimen/_16sp"/>
            <TextView
                android:id="@+id/tv_sub_moscow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_russia"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="@dimen/_8dp"
                android:layout_marginStart="@dimen/_4dp"
                android:textSize="@dimen/_16sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_16dp">
        <ImageButton
            android:id="@+id/ib_jakarta"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"

            android:background="@android:color/white"
            android:src="@drawable/ic_location"
            android:theme="@style/Theme.WeatherApp.New"
            android:contentDescription="@string/txt_content_desc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_jakarta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_jakarta_indonesia"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="@dimen/_8dp"
                android:layout_marginStart="@dimen/_4dp"
                android:textSize="@dimen/_16sp"/>
            <TextView
                android:id="@+id/tv_sub_jakarta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_jakarta"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="@dimen/_8dp"
                android:layout_marginStart="@dimen/_4dp"
                android:textSize="@dimen/_16sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20dp">
        <ImageButton
            android:id="@+id/ib_create"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:background="@android:color/white"
            android:src="@drawable/ic_add"
            android:theme="@style/Theme.WeatherApp.New"
            android:contentDescription="@string/txt_content_desc"/>
        <TextView
            android:id="@+id/tv_new_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_city"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="@dimen/_8dp"
            android:layout_marginStart="@dimen/_4dp"
            android:textSize="@dimen/_16sp"/>
    </LinearLayout>

</LinearLayout>